--- a/src/pages/User.css
+++ b/src/pages/User.css
@@ -1,3 +1,23 @@
+button.signIn {
+    width: auto;
+    background-image: url(./Google.svg);
+    background-size: 18px;
+    background-position: 8px;
+    background-repeat: no-repeat;
+    background-color: #fff;
+    padding: 8px 8px 8px 35px;
+    font-family: 'Pretendard';
+    color: rgba(0, 0, 0, 0.54);
+    font-size: 14px;
+    font-weight: 500;
+    vertical-align: middle;
+    border: 1px solid rgba(5, 25, 35, 0.3);
+}
+
+button.signIn:hover {
+    color: rgba(0, 0, 0, 1);
+}
+
 p.userName {
     font-weight: 500;
     font-size: 15px;
